fix latest spacing

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,10 @@ h2, p, .col, .col-md, .col-md-4, .card-body, .flex-row, ul  {
     padding: 0 !important;
 }
 
+.news-category {
+    margin-bottom: 4rem;
+}
+
 a, a:hover {
     color: inherit;
     text-decoration: none;
@@ -77,7 +81,7 @@ h4 {
 
 #latest-news-col-article-container:not(:last-of-type) {
     border-bottom: 1px solid gray;
-    padding-bottom: 1rem;
+    /* padding-bottom: 1rem; */
 }
 
 .card-title:hover {
